# calendar-sync

./: .gitignore  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  pyproject.toml
calendar_sync/: calendar_synchronization.py  config_tools.py  event_tools.py  google_tools.py  main.py
calendar_sync/calendars/: calendar_base.py  google_calendar.py  ics_calendar.py
