[project]
name = "calendar-sync"
version = "0.1.0"
description = "Synchronization tool for Outlook and Google Calendar"
readme = "README.md"
authors = [
    { name = "Serwan Asaad", email = "serwan.asaad@quantum-machines.co" },
]
requires-python = ">=3.9"
dependencies = [
    "google-api-python-client>=2.161.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "pytz>=2025.1",
    "ics @ git+https://github.com/ics-py/ics-py.git@e217aae",
    "arrow>=1.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pyperclip>=1.9.0",
]
